--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -209,36 +209,41 @@
                                 <ul class="list-group list-group-flush">
                                     <h2 class="h4 fw-bold mb-4">Novels</h2>
 
-                                    <li class="list-group-item bg-body-tertiary p-0 mb-4">
+                                    <li class="list-group-item bg-body-tertiary pt-0 pb-4 px-0">
                                         <h3 class="h5 fw-bold mb-3">Font family</h3>
                                         <form action="/settings/novelFontType" method="post">
                                             <div class="form-check mb-3">
                                                 <input class="form-check-input" type="radio" name="font-type" id="font-type-mincho" value="mincho">
                                                 <label class="form-check-label" for="font-type-mincho">Mincho</label>
+                                                <div id="font-type-mincho-help" class="form-text">A serif font style that resembles traditional Japanese printing. It's often used for formal or literary content.</div>
                                             </div>
                                             <div class="form-check mb-3">
-                                                <input class="form-check-input" type="radio" name="font-type" id="font-type-gothic" value="gothic">
+                                                <input class="form-check-input" type="radio" name="font-type" id="font-type-gothic" value="gothic" checked>
                                                 <label class="form-check-label" for="font-type-gothic">Gothic</label>
+                                                <div id="font-type-gothic-help" class="form-text">A sans-serif font style that's clean and modern. It's commonly used for easy readability on digital screens.</div>
                                             </div>
-                                            <button type="submit" class="btn btn-secondary fw-bold rounded-pill mb-4">Submit</button>
+                                            <button type="submit" class="btn btn-secondary fw-bold rounded-pill">Submit</button>
                                         </form>
                                     </li>
 
-                                    <li class="list-group-item bg-body-tertiary p-0">
+                                    <li class="list-group-item bg-body-tertiary pt-4 pb-0 px-0">
                                         <h3 class="h5 fw-bold mb-3">Force text orientation</h3>
                                         <form action="/settings/novelViewMode" method="post">
                                             <div class="mb-3">
-                                            <div class="form-check">
+                                            <div class="form-check mb-3">
                                                 <input class="form-check-input" type="radio" name="view-mode" id="tx-ori-h" value="1">
                                                 <label class="form-check-label" for="tx-ori-h">Horizontal</label>
+                                                <div id="tx-ori-h-help" class="form-text">Forces the text to be displayed horizontally, left-to-right. This is common for most languages and easier to read on smaller screens.</div>
                                             </div>
-                                            <div class="form-check">
+                                            <div class="form-check mb-3">
                                                 <input class="form-check-input" type="radio" name="view-mode" id="tx-ori-v" value="2">
                                                 <label class="form-check-label" for="tx-ori-v">Vertical</label>
+                                                <div id="tx-ori-v-help" class="form-text">Forces the text to be displayed vertically, top-to-bottom and right-to-left. This is traditional for some East Asian languages and can provide a unique reading experience.</div>
                                             </div>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="radio" name="view-mode" id="tx-ori-n" value="">
+                                            <div class="form-check mb-3">
+                                                <input class="form-check-input" type="radio" name="view-mode" id="tx-ori-n" value="" checked>
                                                 <label class="form-check-label" for="tx-ori-n">Don't force (default from Pixiv)</label>
+                                                <div id="tx-ori-n-help" class="form-text">Uses the original text orientation as set by the author on Pixiv. This is the default option and respects the intended layout of the novel.</div>
                                             </div>
                                             </div>
                                             <button type="submit" class="btn btn-secondary fw-bold rounded-pill">Submit</button>
@@ -251,6 +256,7 @@
                             <!-- Advanced settings tab -->
                             <div class="tab-pane fade" id="advanced-settings" role="tabpanel" aria-labelledby="advanced-settings-tab">
                                 <ul class="list-group list-group-flush">
+
                                     <li class="list-group-item bg-body-tertiary p-0 mb-4">
                                         <h2 class="h4 fw-bold mb-4">Advanced settings</h2>
                                         <h3 class="h5 fw-bold mb-3">Cookie values</h3>
@@ -293,8 +299,10 @@
                                             <button type="submit" class="btn btn-danger">Reset all cookies/preferences</button>
                                         </form>
                                     </li>
+
                                 </ul>
                             </div>
+
                         </div>
                     </div>
                 </div>
