--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -289,9 +289,12 @@
                                   <h2 class="h4 fw-bold mb-4">Advanced settings</h2>
                                     <li class="list-group-item bg-body-tertiary pt-0 pb-4 px-0">
                                         <h3 class="h5 fw-bold mb-3">Cookie values</h3>
-                                        <p>
+                                        <!-- <p>
                                             Please note that some cookies here such as ShowArtR18,
                                             ShowArtR18G, and ShowArtAI are for features still under development.
+                                        </p> -->
+                                        <p>
+                                          You can directly set cookie values here.
                                         </p>
                                         {{- range k, v := CookieList }}
                                         <div class="mb-3">
@@ -311,10 +314,12 @@
                                         <li class="list-group-item bg-body-tertiary pt-4 pb-0 px-0">
                                         <h3 class="h5 fw-bold mb-3">Raw settings</h3>
                                         <p>
-                                            You can save your current cookie values to quickly set your settings on other compatible instances,
-                                            or if the current instance's cookies went expired.
+                                          You can save your current cookie values to quickly set your settings on other compatible instances,
+                                          or if the current instance's cookies expired.
                                         </p>
-                                        <p>Invalid values will be ignored.</p>
+                                        <p>
+                                          Invalid values will be ignored.
+                                        </p>
                                         <!-- Save raw settings -->
                                         <form action="/settings/raw" method="post">
                                             <div class="mb-3">
